fixed potential deadlock, fixed CMake scripts for release build

--- a/QtOsgBridgeApplication/CMakeLists.txt
+++ b/QtOsgBridgeApplication/CMakeLists.txt
@@ -23,7 +23,7 @@ source_group(GeneratedFiles FILES
 # specify needed osg libraries
 set(OSG_LIBRARIES_TMP "osg osgViewer osgDB osgGA osgUtil osgText OpenThreads")
 
-get_libraries(OSG_LIBRARIES ${OSG_LIBRARY} "" ${OSG_LIBRARIES_TMP})
+get_libraries(OSG_LIBRARIES ${OSG_LIBRARY_RELEASE} "" ${OSG_LIBRARIES_TMP})
 get_libraries(OSG_LIBRARIES_DEBUG ${OSG_LIBRARY_DEBUG} ${OSG_LIBRARY_SUFFIX} ${OSG_LIBRARIES_TMP})
 
 # set include directories
